force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__AddendumDocIdField__c.field-meta.xml
<CustomField>
    <fullName>Loop__AddendumDocIdField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the field name that stores a Document Id to include the document(s) in the DocGen Package. (Use the Field Tagger with Document Type set to Excel.)</inlineHelpText>
    <label>Addendum Doc Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>