force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__AdHoc_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Loop__AdHoc_Apex_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AdHoc Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>