force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Loop__Email_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template</label>
    <length>20</length>
    <type>Text</type>
</CustomField>