force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Filter__c.field-meta.xml
<CustomField>
    <fullName>Loop__Filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this value with the filter and filtertype querystring parameters on your custom button or link to filter which DocGen Packages are listed. Filtertype options are equals, doesnotequal, startswith, endswith, contains, and doesnotcontain.</inlineHelpText>
    <label>Filter</label>
    <type>TextArea</type>
</CustomField>