force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__KA_Optional__c.field-meta.xml
<CustomField>
    <fullName>Loop__KA_Optional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Files from selected article types can be included at DocGen Package run time.

Use Shift or Ctrl to select multiple options. Use Ctrl to deselect.</inlineHelpText>
    <label>Optional Articles</label>
    <type>TextArea</type>
</CustomField>