force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__KA_Required__c.field-meta.xml
<CustomField>
    <fullName>Loop__KA_Required__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>All files from selected Article Types will be included with the DocGen Package automatically.

Use Shift or Ctrl to select multiple options. Use Ctrl to deselect.</inlineHelpText>
    <label>Required Articles</label>
    <type>TextArea</type>
</CustomField>