force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__KA_Separate__c.field-meta.xml
<CustomField>
    <fullName>Loop__KA_Separate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Files from selected article types can be included as separate attachments at run time. (If an article has more than one file field, the files will be listed as separate options.)

Use Shift or Ctrl to select multiple options. Use Ctrl to deselect.</inlineHelpText>
    <label>Separate Optional Articles</label>
    <type>TextArea</type>
</CustomField>