force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__LastSent__c.field-meta.xml
<CustomField>
    <fullName>Loop__LastSent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Once activated, this field will be updated each time the report is sent out.</inlineHelpText>
    <label>Last Sent</label>
    <type>DateTime</type>
</CustomField>