force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Locale__c.field-meta.xml
<CustomField>
    <fullName>Loop__Locale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This will override the user&apos;s locale when running a DocGen Package. The value must be a valid locale (e.g. en-us, en-uk, fr-ca, etc.). Use the Field Tagger to dynamically set the locale.</inlineHelpText>
    <label>Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>