force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Mass_Email_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Loop__Mass_Email_Report_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mass Email Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>