force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__MassEmailReport__c.field-meta.xml
<CustomField>
    <fullName>Loop__MassEmailReport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is a Salesforce Report Id. The first column (# zero) of the report must be the lead, contact, or user id that the report will be emailed to. Each consecutive column can be used in a report filter as !param# where # is the column number.</inlineHelpText>
    <label>Mass Email Report to</label>
    <length>20</length>
    <type>Text</type>
</CustomField>