force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>Loop__Preview_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preview URL</label>
    <type>Url</type>
</CustomField>