force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__ProcessingText__c.field-meta.xml
<CustomField>
    <fullName>Loop__ProcessingText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Semi-colon delimited list of at most 6 values. Defaults to: initializing docgen package; security check; acquiring data; looping documents; combining docgen package; routing docgen package. For no processing text, type null.</inlineHelpText>
    <label>Processing Text</label>
    <type>TextArea</type>
</CustomField>