force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Queue_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Loop__Queue_Folder_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Documents sent to the Queue from this DocGen Package will be stored in this Document Folder.</inlineHelpText>
    <label>Queue Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>