force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__RenameLOOP__c.field-meta.xml
<CustomField>
    <fullName>Loop__RenameLOOP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The LOOP It delivery option will be renamed to this value.</inlineHelpText>
    <label>Rename LOOP It</label>
    <length>255</length>
    <type>Text</type>
</CustomField>