force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Security__c.field-meta.xml
<CustomField>
    <fullName>Loop__Security__c</fullName>
    <defaultValue>IF( $RecordType.Name = &apos;Report&apos;, &quot;&apos;&quot; &amp; $User.Id &amp; &quot;&apos;&quot; , &quot;&apos;&quot; &amp; $User.ProfileId &amp; &quot;&apos;&quot; )</defaultValue>
    <description>List of Profile, Role, Contact, and or User Ids associated with a DocGen Package.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Security</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>