force-app/main/default/src/objects/Loop__DDP__c/fields/Loop__Skip_AdHoc_Processing__c.field-meta.xml
<CustomField>
    <fullName>Loop__Skip_AdHoc_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default, all files, including those selected at run time, are processed. Check this to prevent processing of ad hoc files selected at run time.</description>
    <label>Skip AdHoc Processing</label>
    <type>Checkbox</type>
</CustomField>