force-app/main/default/src/objects/Loop__DDP__c/listViews/Loop__All.listView-meta.xml
<ListView>
    <fullName>Loop__All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Loop__Description__c</columns>
    <columns>Loop__Filter__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>